RESOLVED FIXED49698
[skia] assert when attempting to get (but not use) pointer to outside the canvas
https://bugs.webkit.org/show_bug.cgi?id=49698
Summary [skia] assert when attempting to get (but not use) pointer to outside the canvas
Mike Lawther
Reported 2010-11-17 16:36:06 PST
[skia] assert when attempting to get (but not use) pointer to outside the canvas
Attachments
Patch (3.26 KB, patch)
2010-11-17 16:44 PST, Mike Lawther
no flags
Mike Lawther
Comment 1 2010-11-17 16:44:33 PST
Mike Lawther
Comment 2 2010-11-17 16:51:13 PST
This fixes the assert we see in canvas/philip/tests/2d.imageData.get.source.outside on Windows debug.
James Robinson
Comment 3 2010-11-17 16:56:25 PST
Comment on attachment 74177 [details] Patch R=me
WebKit Commit Bot
Comment 4 2010-11-19 03:10:01 PST
Comment on attachment 74177 [details] Patch Clearing flags on attachment: 74177 Committed r72374: <http://trac.webkit.org/changeset/72374>
WebKit Commit Bot
Comment 5 2010-11-19 03:10:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.