2010-11-19  Mike Lawther  <mikelawther@chromium.org>

Reviewed by James Robinson.

        [skia] assert when attempting to get (but not use) pointer to outside the canvas
        https://bugs.webkit.org/show_bug.cgi?id=49698

        Removed expectation of failure on Win dbg

        * platform/chromium/test_expectations.txt:
2010-11-19  Mike Lawther  <mikelawther@chromium.org>

        Reviewed by James Robinson.

        [skia] assert when attempting to get (but not use) pointer to outside the canvas
        https://bugs.webkit.org/show_bug.cgi?id=49698

        Early return to avoid getting a pointer to outside the canvas, and
        hence triggering a Skia assert.

        * platform/graphics/skia/ImageBufferSkia.cpp:
        (WebCore::getImageData):

Canonical link: https://commits.webkit.org/62836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72374 268f45cc-cd09-0410-ab3c-d52691b4dbfc